# instrument-simulation

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md  beam.mac  block.gdml  detectors.csv  detectors.mac  gdml_define.xsd  gdml_extensions.xsd  gdml_materials.xsd  gdml_parameterised.xsd  geant4-sim-gdml.cc  geant4-sim-gdml.h  run.mac  vis.mac
backup/: AaltoPhysicsList.cc  AaltoPhysicsList.hh
example/: output.root  run.sh
gdml/: 2DTest.gdml  ChipDet.gdml  block.gdml  block1.gdml  degrader.gdml  gdml_replicas.xsd  main.gdml  materials.xml  test.gdml
include/: ActionInitialization.hh  AnalysisManager.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  ExceptionHandler.hh  G4IAEAphspReader.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  ThreadRun.hh  iaea_phsp.h  utilities.h
macro/: beam.mac  detectors.mac  gcr3.mac  run.mac  runbeam.mac  spectrum.mac  uni.mac  vis.mac
python/: mt_root_mwe.py  palette.py
schema/: gdml.xsd  gdml_core.xsd  gdml_replicas.xsd  gdml_solids.xsd
src/: ActionInitialization.cc  AnalysisManager.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  ExceptionHandler.cc  G4IAEAphspReader.cc  G4IAEAphspWriter.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  ThreadRun.cc  iaea_header.cc  iaea_phsp.cc  utilities.cc
